add circle ci part 3

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,4 +29,6 @@ workflows:
     jobs:
       - publish:
           filters:
-            branch: [master, develop]
+            branch:
+              only:
+                - [master,develop]
