add circle ci part 3

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,4 +31,4 @@ workflows:
           filters:
             branch:
               only:
-                - [master,develop]
+                - master
