--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,13 +22,11 @@ jobs:
       - run:
           name: build site and push to github-pages
           command: sh publish.sh
-      - run: mvn integration-test
 workflows:
   version: 2
   build_site_and_publish:
     jobs:
-      - publish:
-          filters:
-            branch:
-              only:
-                - master
+      build:
+        branches:
+          only:
+            - master
