--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ workflows:
   version: 2
   build_site_and_publish:
     jobs:
-      build:
-        branches:
-          only:
-            - master
+      - publish:
+          filters:
+            branches:
+              only: master
