--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 
+    implementation 'com.facebook.stetho:stetho-okhttp:1.5.1'
+
 
 }
 
