--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_launch"
         android:supportsRtl="true"
-        android:name=".App"
+        android:name=".activity.App"
         android:theme="@style/AppTheme">
 
 
@@ -26,7 +26,7 @@
             android:name="com.facebook.FacebookContentProvider"
             android:exported="true"/>
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,11 +34,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".HomeActivity"
+            android:name=".activity.HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ListWallpaper" />
-        <activity android:name=".ViewWallpaper"></activity>
+        <activity android:name=".activity.ListWallpaper" />
+        <activity android:name=".activity.ViewWallpaper"></activity>
     </application>
 
 </manifest>
