--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,28 +23,28 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.android.support:design:27.0.2'
-    implementation 'com.google.firebase:firebase-database:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.firebaseui:firebase-ui-database:3.1.1'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.github.d-max:spots-dialog:0.7@aar'
 
     //Room DB
-    implementation 'android.arch.persistence.room:runtime:1.1.0-alpha2'
-    implementation 'android.arch.persistence.room:rxjava2:1.1.0-alpha2'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.1.0-alpha2'
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    implementation 'android.arch.persistence.room:rxjava2:1.1.1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
     // Rx java
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 
     implementation 'com.facebook.stetho:stetho-okhttp:1.5.1'
@@ -54,6 +54,13 @@ dependencies {
 
     // New FloatingActionButton
     implementation 'com.github.clans:fab:1.6.4'
+
+    // Firebase
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.google.firebase:firebase-storage:11.8.0'
+    implementation 'com.firebaseui:firebase-ui-database:3.2.1'
+    implementation 'com.firebaseui:firebase-ui-auth:3.2.1'
 
 
 }
